--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
         });
 
         const baseMaps = {
-            "แผนที่ลายเส้น (Clean)": cleanMap,
-            "ภาพถ่ายดาวเทียม": satelliteMap
+            "แผนที่ลายเส้น": cleanMap,
+            "ภาพดาวเทียม": satelliteMap
         };
         
         const overlayMaps = {
