--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <div id="modalForm" class="modal">
         <div class="modal-content">
-            <h3 style="margin: 0 0 10px 0; text-align:center;">📝 บันทึกข้อมูล</h3>
+            <h3 style="margin: 0 0 10px 0; text-align:center;">บันทึกข้อมูล</h3>
             
             <div class="form-group">
                 <label>ปักหมุดตำแหน่ง</label>
@@ -142,8 +142,8 @@
             <div class="form-group">
                 <label>สถานะ</label>
                 <select id="status">
-                    <option value="Open">เปิดใช้งาน</option>
-                    <option value="Closed">ปิด/เลิกกิจการ</option>
+                    <option value="Open">เปิดบริการ</option>
+                    <option value="Closed">เลิกกิจการ</option>
                 </select>
             </div>
 
